@@ -58,3 +58,6 @@ __pycache__
 regress-*-[0-9][0-9]
 .DS_Store
 out-*/
+src/TAGS
+TAGS
+core.*
