@@ -43,9 +43,11 @@ int main(int argc,char **argv)
 	exit(1);
     }
 
+#ifdef HAVE_DLOPEN_PREFLIGHT
     if(!dlopen_preflight(fname)){
 	err(1,"dlopen_preflight - cannot open %s: %s",fname,dlerror());
     }
+#endif
 
     void *lib=dlopen(fname, RTLD_LAZY);
 
@@ -64,10 +66,10 @@ int main(int argc,char **argv)
 #endif
 #endif
 
+    feature_recorder_set fs(0);
     uint8_t buf[100];
     pos0_t p0("");
     sbuf_t sbuf(p0,buf,sizeof(buf),sizeof(buf),false);
-    feature_recorder_set fs(0);
     scanner_params sp(scanner_params::PHASE_STARTUP,sbuf,fs);
     recursion_control_block rcb(0,"STAND",true);
     scanner_info si;
@@ -78,12 +80,30 @@ int main(int argc,char **argv)
     return 0;
 }
 
+feature_recorder_set::feature_recorder_set(uint32_t f):flags(f),input_fname(),
+                                                  outdir(),frm(),Mlock(),scanner_stats()
+{
+    /* not here */
+}
+
 feature_recorder *feature_recorder_set::get_name(const std::string &name) 
 {
     return 0;
 }
 
-feature_recorder *feature_recorder_set::get_alert_recorder() 
-{
-    return 0;
-}
+/* http://stackoverflow.com/questions/9406580/c-undefined-reference-to-vtable-and-inheritance 
+ * Must provide definitions for all virtual functions
+ */
+
+void scanner_info::get_config(const scanner_info::config_t &c, const std::string &n,std::string *val,const std::string &help){}
+void scanner_info::get_config(const std::string &n,std::string *val,const std::string &help) {}
+void scanner_info::get_config(const std::string &n,uint64_t *val,const std::string &help) {}
+void scanner_info::get_config(const std::string &n,int32_t *val,const std::string &help) {}
+void scanner_info::get_config(const std::string &n,uint32_t *val,const std::string &help) {}
+void scanner_info::get_config(const std::string &n,uint16_t *val,const std::string &help) {}
+void scanner_info::get_config(const std::string &n,uint8_t *val,const std::string &help) {}
+#ifdef __APPLE__
+void scanner_info::get_config(const std::string &n,size_t *val,const std::string &help) {}
+#define HAVE_GET_CONFIG_SIZE_T
+#endif
+void scanner_info::get_config(const std::string &n,bool *val,const std::string &help) {}
